Fix z-index for progress bar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,4 +33,5 @@ a {
   right: 0;
   height: 10px;
   transform-origin: 0%;
+  z-index: 999;
 }
